Minur UI fixes, Diff viewver chanes